# nanocode-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  PEBBLE.md  README.md
.github/workflows/: ci.yml  release-nanocode.yml  release-pebble.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  error.rs  lib.rs  sse.rs  types.rs
crates/api/tests/: client_integration.rs
crates/commands/src/: lib.rs
crates/compat-harness/: Cargo.toml
crates/compat-harness/src/: lib.rs
crates/nanocode/: Cargo.toml
crates/nanocode/src/: app.rs  args.rs  init.rs  input.rs  main.rs  models.rs  proxy.rs  render.rs
crates/pebble/: Cargo.toml
crates/pebble/src/: app.rs  args.rs  eval.rs  eval_runner.rs  golden_tests.rs  init.rs  input.rs  main.rs  mcp.rs  models.rs  proxy.rs  render.rs  report.rs  runtime_client.rs  session_store.rs  tool_render.rs  trace_view.rs  ui.rs
crates/pebble/src/app/: tests.rs
crates/pebble/tests/golden/: context-window.txt  mcp-tool-specs.json  replay-json.json  replay-report.txt  (+3 more)
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: hooks.rs  lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: bash.rs  bootstrap.rs  compact.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_stdio.rs  oauth.rs  permissions.rs  prompt.rs  remote.rs  sandbox.rs  session.rs  trace.rs  usage.rs
crates/runtime/tests/fixtures/patches/: binary.patch  no-final-newline.patch  quoted-space-path.patch
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
evals/: smoke.json
(+1 files in other folders)
