[package]
name = "compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
commands = { path = "../commands" }
tools = { path = "../tools" }
runtime = { path = "../runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
