[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
getrandom = "0.3"
sha2 = "0.10"
glob = "0.3"
ignore = "0.4"
platform = { path = "../platform" }
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "time"] }

[lints]
workspace = true
